--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,19 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+@media screen and (max-width: 768px){
+    .container {
+        width: 768px;
+        margin: 0 auto;
+}
+}
+
+@media screen and (max-width: 480px){
+    .container {
+        display: flex;
+        flex-direction: column;
+        width: 480px;
+        margin: 0 auto;
+        padding: 0 20px;
+}
+}
