--- a/css/style.css
+++ b/css/style.css
@@ -131,15 +131,23 @@ img {
     .container {
         width: 768px;
         margin: 0 auto;
+        padding: 0 20px;
 }
 }
 
 @media screen and (max-width: 480px){
     .container {
-        display: flex;
-        flex-direction: column;
         width: 480px;
         margin: 0 auto;
-        padding: 0 20px;
-}
+        
+    }
+
+    *{
+        padding: 0 0;
+    }
+    .row{
+        display: flex;
+        flex-direction: column;
+        align-items: center;   
+    }
 }
