--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ img {
  ************************************************/
 @media screen and (max-width: 768px){
     .container {
-        width: 768px;
+        max-width: 768px;
         margin: 0 auto;
         padding: 0 20px;
 }
@@ -137,7 +137,7 @@ img {
 
 @media screen and (max-width: 480px){
     .container {
-        width: 480px;
+        max-width: 480px;
         margin: 0 auto;
         
     }
