--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
-@media screen and (min-width: 768px){
+@media screen and (max-width: 768px){
     .container {
        width: 100%;
         margin: 0 auto;
@@ -147,8 +147,35 @@ img {
     }
 
     .row{
-        display: flex;
-        flex-direction: column;
-        align-items: center;   
+        display: block;
+        margin: 20px auto;
+        width: 400px;
+        text-align: center;
     }
+
+    .col{
+        padding-left: 0rem;
+        padding-right: 0rem;
+    }
+
+    .card {
+        width: 400px;
+        margin: 20px auto;
+    }
+
+    .col-left{
+        display: block;
+        margin: 20px auto;
+        width: 100%;
+        text-align: center;
+    }
+
+    .col-right{
+        display: block;
+        margin: 20px auto;
+        width: 400px;
+        
+    }
+    }
+    
 }
